--- a/css/style.css
+++ b/css/style.css
@@ -352,8 +352,10 @@ template {
   color: white;
   text-decoration: none;
   border-radius: 100px;
+  text-align: center;
   font-family: "Point-Bold", sans-serif;
   letter-spacing: -0.02em;
+  line-height: 1.3;
 }
 
 .btn-orange {
@@ -383,7 +385,8 @@ template {
   background: linear-gradient(90deg, #FF8786 0%, #FACE8A 100%);
   padding: 24px 48px;
   font-size: 32px;
-  line-height: 1;
+  display: inline-block;
+  margin: 0 1em 0 0;
 }
 
 .btn-sale:hover {
@@ -405,7 +408,7 @@ template {
   background: linear-gradient(90deg, #3AA1FF 0%, #00F8FF 100%);
   padding: 24px 48px;
   font-size: 32px;
-  line-height: 1;
+  display: inline-block;
 }
 
 .btn-promo:hover {
@@ -451,7 +454,7 @@ template {
 
 body {
   font-family: Verdana, Geneva, sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   color: #111111;
   line-height: 1.6;
 }
@@ -476,6 +479,11 @@ body.lock {
 
 .main {
   position: relative;
+}
+
+.responsive {
+  width: 100%;
+  height: auto;
 }
 
 .header {
@@ -524,7 +532,7 @@ a.menu__link:hover {
   position: absolute;
   z-index: 1;
   top: -11px;
-  right: -140px;
+  right: -90px;
   background: #fff;
   border-radius: 8px;
 }
@@ -633,10 +641,45 @@ a.menu__link:hover {
   background-repeat: no-repeat;
 }
 
+.title-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: relative;
   padding-top: 50px;
-  min-height: 600px;
+}
+
+.title-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .decs {
@@ -700,7 +743,7 @@ a.menu__link:hover {
   font-style: normal;
   font-weight: bold;
   letter-spacing: -0.01em;
-  margin: 1.4em 0 0 1.84em;
+  margin: 2.4em 0 0 1.84em;
 }
 
 .slider__bg {
@@ -724,10 +767,24 @@ a.menu__link:hover {
 }
 
 .slider__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 40px 60px;
   border: 2px solid #111111;
+  border-image-slice: 2;
+  border-width: 2px;
+  border-image-source: linear-gradient(90deg, #3AA1FF 0%, #00F8FF 100%);
   background-color: #fff;
-  min-height: 500px;
-  width: 1180px;
+  height: auto;
+  width: auto;
 }
 
 .swiper-slide-active {
@@ -736,13 +793,9 @@ a.menu__link:hover {
   border-image-source: linear-gradient(90deg, #3AA1FF 0%, #00F8FF 100%);
 }
 
-.slider__item {
-  padding: 72px 220px 0;
-}
-
 .slider__item h3 {
-  font-size: 40px;
-  line-height: 1.4;
+  font-size: 36px;
+  line-height: 1.16;
   color: #111111;
   font-family: "Point-Bold", sans-serif;
   letter-spacing: -0.01em;
@@ -758,7 +811,12 @@ a.menu__link:hover {
 }
 
 .slider__text {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  display: none;
 }
 
 .skills {
@@ -1033,6 +1091,39 @@ a.menu__link:hover {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
   gap: 16px;
+}
+
+.partners {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
+  grid-gap: 16px;
+}
+
+.partners__item {
+  background: #ffffff;
+  list-style-type: none;
+}
+
+.partners__item img {
+  display: block;
+  -o-object-fit: contain;
+     object-fit: contain;
+  max-width: 100%;
+  width: 224px;
+  height: 96px;
+}
+
+.partners__item a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
 }
 
 .reviews {
@@ -1338,7 +1429,13 @@ a.menu__link:hover {
   line-height: 1.2;
 }
 
-@media (min-width: 767px) {
+@media only screen and (min-width: 769px) {
+  .site-container {
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: 1022px) {
   .header__menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1349,7 +1446,7 @@ a.menu__link:hover {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    margin-right: 80px;
+    margin-right: 60px;
   }
 
   .menu__list {
@@ -1360,9 +1457,51 @@ a.menu__link:hover {
         -ms-flex-align: center;
             align-items: center;
   }
+
+  .menu__list > li {
+    margin: 0 26px 0 0;
+  }
 }
 
-@media (max-width: 767px) {
+@media only screen and (min-width: 1601px) {
+  .title-container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .title-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .decs {
+    font-size: 22px;
+    margin: 40px 0;
+    line-height: 1.6;
+    max-width: 700px;
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: block;
+  }
+}
+
+@media (max-width: 1023px) {
   .menu__icon {
     z-index: 5;
     top: 12px;
@@ -1465,7 +1604,9 @@ a.menu__link:hover {
   a.menu__link {
     font-size: 24px;
   }
+}
 
+@media only screen and (max-width: 1023px) {
   .translate_wrapper {
     position: fixed;
     z-index: 1;
@@ -1474,5 +1615,398 @@ a.menu__link:hover {
     right: auto;
     background: #fff;
     border-radius: 8px;
+  }
+}
+
+@media only screen and (max-width: 599px) {
+  .btn-sale,
+  .btn-promo {
+    padding: 16px 28px;
+    font-size: 18px;
+    margin: 0.3em 0;
+  }
+
+  .banner {
+    display: none;
+  }
+
+  .title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: flex-end start;
+        -ms-flex-pack: flex-end start;
+            justify-content: flex-end start;
+    padding-top: 30px;
+    max-width: 320px;
+  }
+
+  .your,
+  .experience {
+    font-size: 46px;
+    line-height: 1.2;
+  }
+
+  .experience {
+    text-align: right;
+    padding: 94px 0 0 0;
+  }
+
+  .wow {
+    position: absolute;
+    top: 60px;
+    left: 30px;
+    font-size: 40px;
+    line-height: 1;
+    padding: 16px 24px 10px;
+  }
+
+  .decs {
+    font-size: 15px;
+    margin: 20px 0;
+    line-height: 1.7;
+  }
+
+  .slider__title {
+    font-size: 28px;
+    font-weight: bold;
+    letter-spacing: -0.01em;
+    margin: 1.6em 0 0.4em 0;
+  }
+
+  .slider__bg {
+    width: 338.28px;
+    height: 297.47px;
+    z-index: -2;
+    left: 110px;
+    top: -80px;
+  }
+
+  .slider__item {
+    padding: 40px;
+    border: 2px solid #111111;
+    border-image-slice: 2;
+    border-width: 2px;
+    border-image-source: linear-gradient(90deg, #3AA1FF 0%, #00F8FF 100%);
+    background-color: #fff;
+    height: auto;
+    width: auto;
+  }
+
+  .slider__item h3 {
+    font-size: 22px;
+    line-height: 1.16;
+    color: #111111;
+    font-family: "Point-Bold", sans-serif;
+    letter-spacing: -0.01em;
+    margin-bottom: 0.46em;
+  }
+
+  .slider__item p {
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 15px;
+    line-height: 1.6;
+    color: #111111;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 768px) {
+  .btn-sale,
+  .btn-promo {
+    padding: 24px 32px;
+    font-size: 24px;
+    margin: 0.3em 0;
+  }
+
+  .banner {
+    display: none;
+  }
+
+  .title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 600px;
+  }
+
+  .your,
+  .experience {
+    font-size: 70px;
+    line-height: 1.2;
+  }
+
+  .experience {
+    text-align: right;
+    padding: 140px 0 0 0;
+  }
+
+  .wow {
+    position: absolute;
+    top: 98px;
+    left: 50px;
+    font-size: 60px;
+    line-height: 1;
+    padding: 26px 36px 20px;
+  }
+
+  .decs {
+    margin: 20px 0;
+    line-height: 1.7;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1022px) {
+  .btn-sale,
+  .btn-promo {
+    padding: 16px 28px;
+    font-size: 18px;
+    margin: 0 0.3em;
+  }
+
+  .title-container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .banner {
+    display: block;
+    top: -2.2em;
+    right: -22em;
+    max-width: 900px;
+  }
+
+  .title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: flex-end start;
+        -ms-flex-pack: flex-end start;
+            justify-content: flex-end start;
+    padding-top: 30px;
+    max-width: 760px;
+  }
+
+  .your,
+  .experience {
+    font-size: 46px;
+    line-height: 1.2;
+  }
+
+  .experience {
+    text-align: left;
+    padding: 94px 0 0 50px;
+  }
+
+  .wow {
+    position: absolute;
+    top: 60px;
+    left: 30px;
+    font-size: 40px;
+    line-height: 1;
+    padding: 16px 24px 10px;
+  }
+
+  .decs {
+    font-size: 15px;
+    margin: 20px 0;
+    line-height: 1.6;
+    max-width: 400px;
+  }
+
+  .title-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media (min-width: 1023px) and (max-width: 1199px) {
+  .btn-sale,
+  .btn-promo {
+    padding: 16px 28px;
+    font-size: 18px;
+    margin: 0 0.3em;
+  }
+
+  .translate_wrapper {
+    top: -11px;
+    right: -80px;
+    background: #fff;
+    border-radius: 8px;
+  }
+
+  .title-container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .banner {
+    display: block;
+    top: -2.8em;
+    right: -22em;
+    max-width: 1000px;
+  }
+
+  .title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: flex-end start;
+        -ms-flex-pack: flex-end start;
+            justify-content: flex-end start;
+    padding-top: 30px;
+    max-width: 760px;
+  }
+
+  .your,
+  .experience {
+    font-size: 60px;
+    line-height: 1.2;
+  }
+
+  .experience {
+    text-align: left;
+    padding: 130px 0 0 70px;
+  }
+
+  .wow {
+    position: absolute;
+    top: 68px;
+    left: 40px;
+    font-size: 56px;
+    line-height: 1;
+    padding: 20px 40px 18px;
+  }
+
+  .decs {
+    font-size: 18px;
+    margin: 30px 0;
+    line-height: 1.6;
+    max-width: 500px;
+  }
+
+  .title-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1600px) {
+  .btn-sale,
+  .btn-promo {
+    padding: 16px 28px;
+    font-size: 18px;
+    margin: 0 0.3em;
+  }
+
+  .title-container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .banner {
+    display: block;
+    top: -2.6em;
+    right: -22em;
+    max-width: 1100px;
+  }
+
+  .title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: flex-end start;
+        -ms-flex-pack: flex-end start;
+            justify-content: flex-end start;
+    padding-top: 30px;
+    max-width: 760px;
+  }
+
+  .your,
+  .experience {
+    font-size: 60px;
+    line-height: 1.2;
+  }
+
+  .experience {
+    text-align: left;
+    padding: 130px 0 0 70px;
+  }
+
+  .wow {
+    position: absolute;
+    top: 68px;
+    left: 40px;
+    font-size: 56px;
+    line-height: 1;
+    padding: 20px 40px 18px;
+  }
+
+  .decs {
+    font-size: 18px;
+    margin: 30px 0;
+    line-height: 1.6;
+    max-width: 600px;
+  }
+
+  .title-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
